# Android-UnityImGui

./: Android.mk  Application.mk  CMakeLists.txt  README.md  README_CN.md
source/Bootstrap/: JniEntry.cpp
source/Foundation/: HookUtils.h  KittyEx.h  Language.h  Logger.h  Singleton.h
source/Foundation/CrashHandler/: CrashHandler.cpp  CrashHandler.h
source/Foundation/ElfScanner/: ElfScannerManager.cpp  ElfScannerManager.h
source/Hooking/Input/: InputEventBridge.cpp  InputEventBridge.h
source/Hooking/Pointer/: IPointerHook.cpp  IPointerHook.h  PointerHookManager.h  ph_arm64_glue.s  ph_trampoline_pool.s
source/Integration/AndroidIme/: ImGuiAndroidIme.cpp  ImGuiAndroidIme.h  ImeBridgeDex.inc  ImeBridgeRunnable.java
source/Platform/Android/: ActivityHost.cpp  ActivityHost.h  AndroidPlatform.h  DisplayInfo.cpp  DisplayInfo.h  JniRuntime.cpp  JniRuntime.h  LooperDispatcher.cpp  LooperDispatcher.h  NativeWindowProvider.cpp  NativeWindowProvider.h
source/Product/Overlay/: OverlayConfig.cpp  OverlayConfig.h  OverlayDraw.cpp  OverlayDraw.h  OverlayMenu.cpp  OverlayMenu.h  OverlayRenderer.cpp  OverlayRenderer.h
source/Render/Backend/: IGraphicsBackend.h  VulkanBackend.cpp  VulkanBackend.h
source/Render/ImGui/: ImGuiHost.cpp  ImGuiHost.h  ImGuiSetup.cpp  ImGuiSetup.h
source/Runtime/: ApplicationRuntime.cpp  ApplicationRuntime.h
source/Runtime/FrameClock/: UnityFrameHook.cpp  UnityFrameHook.h
